syntax = "proto3";
package database_monitoring.v1;
option go_package = "github.com/guilhermearpassos/database_monitoring_v1;dbmv1";
import "google/protobuf/timestamp.proto";
import "database_monitoring/v1/snapshot.proto";
import "database_monitoring/v1/sample.proto";
import "database_monitoring/v1/execution_plan.proto";

service DBMApi {
  rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse);
  rpc ListServerSummary(ListServerSummaryRequest) returns (ListServerSummaryResponse);
  rpc ListServers(ListServersRequest) returns (ListServersResponse);
  rpc ListQueryMetrics(ListQueryMetricsRequest) returns (ListQueryMetricsResponse);
  rpc GetSampleDetails(GetSampleDetailsRequest) returns (GetSampleDetailsResponse);
}
message ListQueryMetricsRequest{
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  string host = 3;
  string database = 4;
  int32 page_size = 5;
  int64 page_number = 6;

}
message ListQueryMetricsResponse{
  repeated QueryMetric metrics = 1;
}

message GetSnapshotRequest{
  string id = 1;
}
message GetSnapshotResponse{
  DBSnapshot snapshot = 1;
}

message ListSnapshotsRequest{
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  string host = 3;
  string database = 4;
  int32 page_size = 5;
  int64 page_number = 6;
}

message ListSnapshotsResponse{
  repeated DBSnapshot snapshots = 1;
  int64 page_number = 2;
  int64 total_count = 3;
}


message ListServerSummaryRequest{
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;

}

message ListServerSummaryResponse{
  repeated ServerSummary servers = 1;
}

message ListServersRequest{
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;

}
message ListServersResponse{
  repeated ServerMetadata servers = 1;
}

message ServerSummary {
  string name = 1;
  string type = 2;
  int32 connections = 3;
  double request_rate = 4;
  map<string, int32> connections_by_wait_group = 5;
}

message GetSampleDetailsRequest {
  bytes sample_id = 1;
  string snap_id = 2;
}

message BlockChain{
  message BlockingNode {
    QuerySample query_sample = 1;
    repeated BlockingNode child_nodes = 2;
  }
  repeated BlockingNode roots = 1;
}

message GetSampleDetailsResponse {
  QuerySample query_sample = 1;
  ParsedExecutionPlan parsed_plan = 2;
  BlockChain block_chain = 3;
}

message GetNormalizedQueryDetailsRequest {
  string query_hash = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message GetNormalizedQueryDetailsResponse {
  //number of executions
  // avg duration chart
  // block info chart
  //execution plan history
}
